--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo Vue</title>
+    <title>Mad Todo List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
@@ -14,14 +14,14 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="card-title">
-                                Add New Activity
+                                Tambah Aktifitas Baru
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12">
                             <div class="input-group">
-                                <span class="input-group-text">To-Do</span>
+                                <span class="input-group-text">Aktifitas</span>
                                 <input type="text" class="form-control" placeholder="Masukkan kegiatan yang akan dicatat..." v-model="newTodo" @keyup.enter="addTodo">
                             </div>
                         </div>
@@ -33,12 +33,12 @@
                     <div class="row">
                         <div class="col-8">
                             <div class="card-title">
-                                To-do List
+                                Daftar Aktifitas
                             </div>
                         </div>
                         <div class="col-4">
                             <button class="btn btn-sm btn-outline-primary" @click="hideCompleted = !hideCompleted">
-                                {{hideCompleted ? "Show All" : "Hide Completed"}}
+                                {{hideCompleted ? "Tampil Semua" : "Hilangkan yang Selesai"}}
                             </button>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                         <table class="table table-stripped table-hover table-responsive">
                             <thead>
                                 <tr>
-                                    <th>Activity Name</th>
+                                    <th>Aktifitas</th>
                                     <th>Status</th>
                                     <th></th>
                                 </tr>
@@ -55,7 +55,7 @@
                                 <tr v-for="todo in filteredTodos" :key="todo.id">
                                     <td>{{todo.text}}</td>
                                     <td><input type="checkbox" class="form-check-inpu" v-model="todo.done" @change="updateDone()"></td>
-                                    <td><button type="button" class="btn btn-danger" @click="deleteTodo(todo)">Remove</button></td>
+                                    <td><button type="button" class="btn btn-danger" @click="deleteTodo(todo)">Hapus</button></td>
                                 </tr>
                             </tbody>
                         </table>
