mengembalikan semula warna tombol

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <div class="col-4">
-                            <button class="btn btn-sm {{hideCompleted ? btn-primary : btn-outline-primary}}" @click="hideCompleted = !hideCompleted">
+                            <button class="btn btn-sm btn-outline-primary" @click="hideCompleted = !hideCompleted">
                                 {{hideCompleted ? "Tampil Semua" : "Hilangkan yang Selesai"}}
                             </button>
                         </div>
